--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <p>Proficient in Python, AutoCAD, Revit, Dynamo, Robot, STAADPro.</p>
             <div class="about-links">
               <a href="mailto:dhuvoorarjun@gmail.com" class="btn btn-primary">Email Me</a>
-              <a href="www.linkedin.com/in/dhuvoori-arjun" class="btn btn-secondary" target="_blank">LinkedIn ↗</a>
+              <a href="www.linkedin.com/in/dhuvoori-arjun/" class="btn btn-secondary" target="_blank">LinkedIn ↗</a>
             </div>
           </div>
           <div class="about-image">
