--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <p>Proficient in Python, AutoCAD, Revit, Dynamo, Robot, STAADPro.</p>
             <div class="about-links">
               <a href="mailto:dhuvoorarjun@gmail.com" class="btn btn-primary">Email Me</a>
-              <a href="www.linkedin.com/in/dhuvoori-arjun/" class="btn btn-secondary" target="_blank">LinkedIn ↗</a>
+              <a href="https://www.linkedin.com/in/dhuvoori-arjun" class="btn btn-secondary" target="_blank">LinkedIn ↗</a>
             </div>
           </div>
           <div class="about-image">
@@ -749,8 +749,8 @@
       <p>© <span id="year"></span> Dhuvoor Arjun. All rights reserved.</p>
       <ul class="footer-links">
         <li><a href="https://github.com/your-username" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/your-handle" target="_blank">LinkedIn</a></li>
-        <li><a href="mailto:you@example.com">Email</a></li>
+        <li><a href="https://www.linkedin.com/in/dhuvoori-arjun" target="_blank">LinkedIn</a></li>
+        <li><a href="mailto:dhuvoorarjun@gmail.com">Email</a></li>
       </ul>
     </div>
   </footer>
