--- a/index.html
+++ b/index.html
@@ -630,13 +630,13 @@
             
             <div class="hero-actions">
               <a href="#projects" class="btn btn-primary">Explore Work</a>
-              <a href="docs/Resume.pdf" class="btn btn-secondary" target="_blank">Resume ↓</a>
+              <a href="docs/Updated_Resume_D Arjun.pdf" class="btn btn-secondary" target="_blank">Resume ↓</a>
             </div>
           </div>
           
           <div class="hero-visual">
             <div class="hero-card">
-              <img src="images/hero-arjun.png" alt="Finance dashboard screenshot" />
+              <img src="images/Rebardesignproj.png" alt="Finance dashboard screenshot" />
             </div>
           </div>
         </div>
@@ -654,7 +654,7 @@
         <div class="grid">
           <!-- Project Card 1 -->
           <article class="card">
-            <img class="card-thumbnail" src="images/arjun-optimizer.png" alt="Portfolio Optimizer" />
+            <img class="card-thumbnail" src="images/FYUPimage.png" alt="Portfolio Optimizer" />
             <div class="card-body">
               <h3 class="card-title">AutoCAD to BIM Interface</h3>
               <p class="card-description">Parsing dxf files from autoCAD on python and converting it into Dynamo importanble format on Revit.</p>
@@ -665,14 +665,14 @@
               </ul>
               <div class="card-actions">
                 <a href="https://github.com/your-username/optimizer" class="btn btn-secondary" target="_blank">Code ↗</a>
-                <a href="reports/optimizer-report.html" class="btn btn-secondary" target="_blank">Report ↗</a>
+                <a href="docs/FYUP Midtrm report - D Arjun.pdf" class="btn btn-secondary" target="_blank">Report ↗</a>
               </div>
             </div>
           </article>
 
           <!-- Project Card 2 -->
           <article class="card">
-            <img class="card-thumbnail" src="images/arjun-backtest.png" alt="Event Backtester" />
+            <img class="card-thumbnail" src="images/delaypred.png" alt="Event Backtester" />
             <div class="card-body">
               <h3 class="card-title">Delay Prediction</h3>
               <p class="card-description">Using Random Forest and Logistical Regression to predict cause of delays in projects.</p>
@@ -690,7 +690,7 @@
 
           <!-- Project Card 3 -->
           <article class="card">
-            <img class="card-thumbnail" src="images/arjun-factors.png" alt="Factor Research" />
+            <img class="card-thumbnail" src="images/courseproj.png" alt="Factor Research" />
             <div class="card-body">
               <h3 class="card-title">Factor Research</h3>
               <p class="card-description">Reproducible pipeline for momentum & value factors with interactive visualization widgets.</p>
@@ -701,7 +701,7 @@
               </ul>
               <div class="card-actions">
                 <a href="https://github.com/your-username/factor-pipeline" class="btn btn-secondary" target="_blank">Code ↗</a>
-                <a href="notebooks/factors-demo.html" class="btn btn-secondary" target="_blank">Demo ↗</a>
+                <a href="docs/Final_Structural_Project_Documentation.pdf" class="btn btn-secondary" target="_blank">Demo ↗</a>
               </div>
             </div>
           </article>
