--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
         <div class="hero-grid">
           <div class="hero-content">
             <h1>Construction Management Software Portfolio</h1>
-            <p class="hero-tagline">Projects focusing on digitisation and icnreasing effeciency in the construction industry. </p>
+            <p class="hero-tagline">Projects focusing on digitisation and increasing effeciency in the construction industry. </p>
             
             <div class="hero-meta">
               <span class="hero-meta-item">📍 India</span>
@@ -648,7 +648,7 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Featured Projects</h2>
-          <p class="section-subtitle">A collection of my work in ML and automated construction product information.</p>
+          <p class="section-subtitle">A collection of my work in ML, BIM and automated construction product information.</p>
         </div>
         
         <div class="grid">
@@ -665,7 +665,7 @@
               </ul>
               <div class="card-actions">
                 <a href="https://github.com/your-username/optimizer" class="btn btn-secondary" target="_blank">Code ↗</a>
-                <a href="docs/FYUP Midtrm report - D Arjun.pdf" class="btn btn-secondary" target="_blank">Report ↗</a>
+                <a href="docs/FYUP Midterm report - D Arjun.pdf" class="btn btn-secondary" target="_blank">Report ↗</a>
               </div>
             </div>
           </article>
@@ -683,7 +683,6 @@
               </ul>
               <div class="card-actions">
                 <a href="https://github.com/your-username/backtester" class="btn btn-secondary" target="_blank">Code ↗</a>
-                <a href="images/arjun-equity.png" class="btn btn-secondary" target="_blank">Equity ↗</a>
               </div>
             </div>
           </article>
@@ -692,16 +691,15 @@
           <article class="card">
             <img class="card-thumbnail" src="images/courseproj.png" alt="Factor Research" />
             <div class="card-body">
-              <h3 class="card-title">Factor Research</h3>
-              <p class="card-description">Reproducible pipeline for momentum & value factors with interactive visualization widgets.</p>
+              <h3 class="card-title">Analysis and Design using BIM</h3>
+              <p class="card-description">Created a comprehensive model on Revit, Provided rebar, Scheduling and exported to Robot for structural analysis.</p>
               <ul class="tags">
-                <li class="tag">Python</li>
-                <li class="tag">Plotly</li>
-                <li class="tag">Research</li>
+                <li class="tag">Revit</li>
+                <li class="tag">Detailing</li>
+                <li class="tag">Robot</li>
               </ul>
               <div class="card-actions">
-                <a href="https://github.com/your-username/factor-pipeline" class="btn btn-secondary" target="_blank">Code ↗</a>
-                <a href="docs/Final_Structural_Project_Documentation.pdf" class="btn btn-secondary" target="_blank">Demo ↗</a>
+                <a href="docs/Final_Structural_Project_Documentation.pdf" class="btn btn-secondary" target="_blank">Report ↗</a>
               </div>
             </div>
           </article>
