--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             </div>
           </div>
           <div class="about-image">
-            <img src="images/arjun.jpg" alt="Dhuvoor Arjun" />
+            <img src="images/arjun1.jpg" alt="Dhuvoor Arjun" />
           </div>
         </div>
       </div>
