--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
       <div class="container">
         <div class="hero-grid">
           <div class="hero-content">
-            <h1>Construction Management Software Portfolio</h1>
+            <h1>Project Portfolio</h1>
             <p class="hero-tagline">Projects focusing on digitisation and increasing effeciency in the construction industry. </p>
             
             <div class="hero-meta">
