--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
               <p class="card-description">Parsing dxf files from autoCAD on python and converting it into Dynamo importanble format on Revit.</p>
               <ul class="tags">
                 <li class="tag">Python</li>
-                <li class="tag">edxf</li>
+                <li class="tag">ezdxf</li>
                 <li class="tag">Dynamo</li>
               </ul>
               <div class="card-actions">
