--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                 <li class="tag">Dynamo</li>
               </ul>
               <div class="card-actions">
-                <a href="https://github.com/your-username/optimizer" class="btn btn-secondary" target="_blank">Code ↗</a>
+                <a href="https://github.com/dhuvoor-arjun/FYUP/blob/main/FYUP.py" class="btn btn-secondary" target="_blank">Code ↗</a>
                 <a href="docs/FYUP Midterm report - D Arjun.pdf" class="btn btn-secondary" target="_blank">Report ↗</a>
               </div>
             </div>
