--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
-        <a class="btn btn-primary" href="https://github.com/your-username" target="_blank">
-          GitHub ↗
+        <a class="btn btn-primary" href="https://www.linkedin.com/in/dhuvoori-arjun" target="_blank">
+          LinkedIn ↗
         </a>
       </nav>
     </div>
