--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
     <div class="container">
       <p>© <span id="year"></span> Dhuvoor Arjun. All rights reserved.</p>
       <ul class="footer-links">
-        <li><a href="https://github.com/your-username" target="_blank">GitHub</a></li>
+        <li><a href="https://github.com/dhuvoor-arjun" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/dhuvoori-arjun" target="_blank">LinkedIn</a></li>
         <li><a href="mailto:dhuvoorarjun@gmail.com">Email</a></li>
       </ul>
