--- a/index.html
+++ b/index.html
@@ -624,8 +624,8 @@
             
             <div class="hero-meta">
               <span class="hero-meta-item">📍 India</span>
-              <span class="hero-meta-item">🏗️ Infrastructure Digitisation</span>
-              <span class="hero-meta-item">💻 Constrution Management</span>
+              <span class="hero-meta-item">🏗️ Constrution Management</span>
+              <span class="hero-meta-item">💻 Infrastructure Digitisation</span>
             </div>
             
             <div class="hero-actions">
