--- a/index.html
+++ b/index.html
@@ -675,7 +675,8 @@
             <img class="card-thumbnail" src="images/delaypred.png" alt="Event Backtester" />
             <div class="card-body">
               <h3 class="card-title">Delay Prediction</h3>
-              <p class="card-description">Using Random Forest and Logistical Regression to predict cause of delays in construction projects.</p> PS: Attached below is progress upto 24th Oct 2025.</p>
+              <p class="card-description">Using Random Forest and Logistical Regression to predict cause of delays in construction projects.</p>
+              <p class="card-description">PS: Attached below is progress upto 24th Oct 2025.</p>
               <ul class="tags">
                 <li class="tag">Random Forest</li>
                 <li class="tag">Logistic Regression</li>
