--- a/index.html
+++ b/index.html
@@ -658,6 +658,7 @@
             <div class="card-body">
               <h3 class="card-title">AutoCAD to BIM Interface</h3>
               <p class="card-description">Parsing dxf files from autoCAD on python and converting it into Dynamo importanble format on Revit.</p>
+              <p class="card-description">PS: Attached below is progress upto 24th Oct 2025.</p>
               <ul class="tags">
                 <li class="tag">Python</li>
                 <li class="tag">ezdxf</li>
@@ -676,7 +677,6 @@
             <div class="card-body">
               <h3 class="card-title">Delay Prediction</h3>
               <p class="card-description">Using Random Forest and Logistical Regression to predict cause of delays in construction projects.</p>
-              <p class="card-description">PS: Attached below is progress upto 24th Oct 2025.</p>
               <ul class="tags">
                 <li class="tag">Random Forest</li>
                 <li class="tag">Logistic Regression</li>
@@ -713,8 +713,9 @@
         <div class="about-grid">
           <div class="about-text">
             <h2 class="section-title">About Me</h2>
-            <p>Fouth year civil engineering undergraduate student with a minor in management interested in the area of construction management, infrastructure digitisation and BIM. </p>
-            <p>Proficient in Python, AutoCAD, Revit, Dynamo, Robot, STAADPro.</p>
+            <p>Fouth year civil engineering undergraduate student with a minor in management looking to specialise in construction management, infrastructure digitisation and BIM. </p>
+            <p>Proficient in Python, AutoCAD, Revit, Dynamo, Robot and STAADPro.</p>
+            <p>Outside academics, I’m an avid reader, particularly of Russian and fantasy novels—and I enjoy staying active by going to the gym and playing football :)</p>
             <div class="about-links">
               <a href="mailto:dhuvoorarjun@gmail.com" class="btn btn-primary">Email Me</a>
               <a href="https://www.linkedin.com/in/dhuvoori-arjun" class="btn btn-secondary" target="_blank">LinkedIn ↗</a>
